==> SoCXin/doc/STM/BSP/RC522/rc522.c <==
#include "rc522.h"
#include "GPIOLIKE51.h"
#include "SYSTICK.h"

unsigned char ReadRawRC(unsigned char Address)
{
		u8 i=0;
		//delay_us(10);
	  PAout(4)=0;
    SPI1s_ReadWriteByte(((Address<<1)&0x7E)|0x80);
		i=SPI1s_ReadWriteByte(0);	
		SPI_I2S_ClearFlag(SPI1, SPI_I2S_FLAG_TXE);	
		//delay_us((u16)10);
		PAout(4)=1;			
		return i;	
}

void WriteRawRC(unsigned char Address, unsigned char value)
{
	PAout(4)=0;	
	//delay_us(10);
	SPI1s_ReadWriteByte((Address<<1)&0x7E);
	//delay_us(10);
	SPI1s_ReadWriteByte(value);
	//delay_us(10);

	SPI_I2S_ClearFlag(SPI1,SPI_I2S_FLAG_TXE);	
	//delay_us((u16)10);
	PAout(4)=1;				
}

char PcdReset()
{
  RC522_RST=1;                             ;
  delay_ns(1000)                             ;
  RC522_RST=0;                             ;
  delay_ns(1000)                             ;
  RC522_RST=1;                             ;
  delay_ns(1000)                           ;
  WriteRawRC(CommandReg,PCD_RESETPHASE);
  delay_ns(1000)                             ;
  WriteRawRC(ModeReg,0x3D)             ;//定义发送和接收常用模式 和Mifare卡通讯，CRC初始值0x6363
  WriteRawRC(TReloadRegL,30)           ;//16位定时器低位 30
  WriteRawRC(TReloadRegH,0)            ;//16位定时器高位
  WriteRawRC(TModeReg,0x8D)            ;//定义内部定时器的设置
  WriteRawRC(TPrescalerReg,0x3E)       ;//设置定时器分频系数  
  WriteRawRC(TxASKReg,0x40)            ;//调制发送信号为100%ASK
  return MI_OK                         ; 
}
