==> LYU2026/National-Undergraduate-Electronics-Design-Contest-2015/读卡器/rc522.c <==
#include<reg52.h>
#include<intrins.h>
#define SET_SPI_CS  spi_cs=1
#define CLR_SPI_CS  spi_cs=0
#define SET_SPI_CK  spi_ck=1
#define CLR_SPI_CK  spi_ck=0
#define SET_SPI_MOSI  spi_mosi=1
#define CLR_SPI_MOSI  spi_mosi=0
#define STU_SPI_MISO  spi_miso
#define SET_RC522RST  spi_rst=1
#define CLR_RC522RST  spi_rst=0
#define  nop()  _nop_()

char PcdReset(void)
{
//PORTD|=(1<<RC522RST);
		SET_RC522RST;
    delay_ns(10);
//PORTD&=~(1<<RC522RST);
		CLR_RC522RST;
    delay_ns(10);
//PORTD|=(1<<RC522RST);
		SET_RC522RST;
    delay_ns(10);
    WriteRawRC(CommandReg,PCD_RESETPHASE);
    delay_ns(10);
    
    WriteRawRC(ModeReg,0x3D);         //和Mifare卡通讯，CRC初始值0x6363
    WriteRawRC(TReloadRegL,30);           
    WriteRawRC(TReloadRegH,0);
    WriteRawRC(TModeReg,0x8D);
    WriteRawRC(TPrescalerReg,0x3E);
 
		WriteRawRC(TxAutoReg,0x40);//必须要
   
    return MI_OK;
}

unsigned char ReadRawRC(unsigned char data Address)
{
    unsigned char xdata ucAddr;
    unsigned char xdata ucResult=0;
		CLR_SPI_CS;
    ucAddr = ((Address<<1)&0x7E)|0x80;
 
		SPIWriteByte(ucAddr);
		ucResult=SPIReadByte();
		SET_SPI_CS;
   return ucResult;
}

void WriteRawRC(unsigned char data Address, unsigned char data value)
{  
    unsigned char xdata ucAddr;
 
		CLR_SPI_CS;
    ucAddr = ((Address<<1)&0x7E);
 
		SPIWriteByte(ucAddr);
		SPIWriteByte(value);
		SET_SPI_CS;
}
